tests/Tree/negative/test002.jvt
-- arithmetic operations on non-numbers

function main() : * {
  add(2, calloc[main]())
}
